# cms

./: .gitignore  CMakeLists.txt  ComputerAddDiaglog.qml  ComputerChangeDialog.qml  ComputerShow.qml  CustomPage.qml  CustomerAddDialog.qml  CustomerChangeDialog.qml  CustomerShow.qml  EmployeeAddDialog.qml  EmployeeChangeDialog.qml  EmployeeShow.qml  FoodAddDialog.qml  FoodChangeDialog.qml  FoodShow.qml  ImageButton.qml  Main.qml  ReceiptAddDialog.qml  ReceiptShow.qml  ServiceAddDialog.qml  ServiceChangeDialog.qml  ServiceShow.qml  TextButton.qml  app.qrc  computer.cpp  computer.h  computerfiltermodel.cpp  computerfiltermodel.h  computermodel.cpp  computermodel.h  customer.cpp  customer.h  customerfiltermodel.cpp  customerfiltermodel.h  customermodel.cpp  customermodel.h  doublelinkedlist.h  employee.cpp  employee.h  employeefiltermodel.cpp  (+28 more)
data/: computer.txt  customer.txt  employee.txt  food.txt  revenues.txt  service.txt
